@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-05-11T08:25:51Z",
+  "timestamp" : "2022-05-12T01:45:36Z",
   "count_outdated" : 1826,
   "uniques_outdated" : 364,
-  "count" : 2100,
+  "count" : 2101,
   "uniques" : 398,
   "clones" : [
     {
@@ -77,8 +77,8 @@
     },
     {
       "timestamp": "2022-05-11T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 0, 1 ]
     }
