@@ -1,5 +1,5 @@
 {
-  "count": 274,
+  "count": 275,
   "uniques": 20,
   "clones": [
     {
@@ -54,7 +54,7 @@
     },
     {
       "timestamp": "2022-05-11T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
