@@ -1,3 +1,9 @@
+2022-05-12T01:45:36Z:
+* notice: last 14d: all unq: 275 20
+* notice: prev accum: outdated-all outdated-unq / all unq: 1826 364 / 2100 398
+* notice: next accum: outdated-all outdated-unq / all unq: 1826 364 / 2101 398
+* notice: prev json diff / prev day diff: unq all: +0 +1 -0 -0 / +0 +1 -0 -0
+
 2022-05-11T08:25:51Z:
 * notice: last 14d: all unq: 274 20
 * notice: prev accum: outdated-all outdated-unq / all unq: 1825 363 / 2099 397
